# dot-validate-chagnes

./: Cargo.toml
src/: main.rs
