[package]
name = "dot-validate-chagnes"
version = "0.1.0"
authors = ["zqhxuyuan <zqhxuyuan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4.3"
md5 = "0.7.0"
log = "0.4.*"
env_logger = "0.7.*"

#futures = { version = "0.3.*" }
futures = { version = "0.3.*", features = ["thread-pool"]}
#tokio = {version = "0.2.*", features = ["full"] }
#tokio = {version = "1.6.0", features = ["full"] }
tokio = {version = "1.0.0", features = ["full"] }
tokio-native-tls = "0.3.0"

reqwest = "0.10.*"

futures-channel = "0.3"
#tokio = { version = "1.0.0", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time"] }
url = "2.0.0"
#tokio-tungstenite = "*"
tokio-tungstenite = { version = "0.14.0", features = ["native-tls"] }
sqlx = { version = "0.5", features = ["postgres", "runtime-async-std-native-tls", "json"] }
#sqlx = { version = "0.4.1", features = ["postgres", "runtime-async-std-native-tls"] }
async-std = { version = "1.6", features = [ "attributes" ] }

tokio-postgres = { version = "0.7.2", features = [ "with-serde_json-1" ] }